# Solana-bootcamp-2026-s1

docs/: project_plan_v2.md  task_breakdown.md  technical_architecture.md  technical_design.md  wooden_fish_app_architecture.md  wooden_fish_app_requirements.md
finalProject/: .gitignore  README.md  demo.md  package-lock.json
finalProject/anchor/: Anchor.toml
finalProject/anchor/programs/artifex/: Cargo.toml
finalProject/anchor/programs/artifex/src/: lib.rs
finalProject/anchor/programs/vault/: Cargo.toml
finalProject/anchor/programs/vault/src/: lib.rs
